--- a/web/web.config
+++ b/web/web.config
@@ -10,7 +10,7 @@
 <configuration>
 	<configSections>
 		<section name="ElFinder" type="ElFinder.Connector.Configuration.ElFinderSection" allowDefinition="Everywhere" allowExeDefinition="MachineToApplication" restartOnExternalChanges="true"/>
-		<section name="rewriter" requirePermission="false" type="Intelligencia.UrlRewriter.Configuration.RewriterConfigurationSectionHandler, Intelligencia.UrlRewriter"/>
+		<!--<section name="rewriter" requirePermission="false" type="Intelligencia.UrlRewriter.Configuration.RewriterConfigurationSectionHandler, Intelligencia.UrlRewriter"/>-->
 	</configSections>
 	<appSettings>
 	</appSettings>
@@ -22,7 +22,7 @@ server=naturalsalon.vn; Pooling=False;Connect Timeout=3000;"
     <!--<add name="con" connectionString="Data Source=(local);Initial Catalog=bcy;Persist Security Info=True;User ID=sa;Password=123456;  Pooling=False;Connect Timeout=3000;" providerName="System.Data.SqlClient"/>-->
     <!--<add name="con" connectionString="Data Source=103.28.36.71;Initial Catalog=nhbie6dn_binhluantin;Persist Security Info=True;User ID=nhbie6dn_binhluantindbusr;Password=aB123$567dbusr;Pooling=false;" providerName="System.Data.SqlClient" />-->
     <!--<add name="con" connectionString="Data Source=103.28.36.202; Initial Catalog=nhlee0ql_db; Persist Security Info=True; User ID=nhlee0ql_user; Password=abc@123" providerName="System.Data.SqlClient"/>-->
-    <add name="con" connectionString="Data Source=(local);Initial Catalog=nkc_131124;Persist Security Info=True;User ID=sa;Password=123456;Pooling=false;" providerName="System.Data.SqlClient" />
+    <add name="con" connectionString="Data Source=(local);Initial Catalog=xetui;Persist Security Info=True;User ID=sa;Password=123456;Pooling=false;" providerName="System.Data.SqlClient" />
     <!--<add name="con" connectionString="Data Source=(local);Initial Catalog=nkc_130709;Persist Security Info=True;User ID=sa;Password=123456;Pooling=false;" providerName="System.Data.SqlClient" />-->
 	</connectionStrings>
 	<system.web>
@@ -74,26 +74,11 @@ server=naturalsalon.vn; Pooling=False;Connect Timeout=3000;"
 			</controls>
 		</pages>
 		<httpHandlers>
-			<add verb="*" path="*.connector" type="ElFinder.Connector.Connector"/>
 			<!--<add path="Reserved.ReportViewerWebControl.axd" verb="*" type="Microsoft.Reporting.WebForms.HttpHandler, Microsoft.ReportViewer.WebForms, Version=10.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" validate="false"/>-->
 			<add verb="*" path="*.plugin" type="linh.httpModule.defaultHandle, linh.httpModule"/>
 			<add verb="*" path="*.captcha" type="linh.httpModule.Captcha, linh.httpModule"/>
 		</httpHandlers>
-		<httpModules>
-			<add type="Intelligencia.UrlRewriter.RewriterHttpModule, Intelligencia.UrlRewriter" name="UrlRewriter"/>
-		</httpModules>
-    
 	</system.web>
-	<ElFinder uplMaxSize="10" dotFiles="true">
-		<Root Url="http://localhost:55599/files" Path="~/up"/>
-		<DisabledCommands>
-			<add Name="duplicate"/>
-		</DisabledCommands>
-		<DisabledMimeTypes>
-			<add Name="application/exe"/>
-			<add Name="application/x-msdownload"/>
-		</DisabledMimeTypes>
-	</ElFinder>
 	<!-- 
         The system.webServer section is required for running ASP.NET AJAX under Internet
         Information Services 7.0.  It is not necessary for previous version of IIS.
@@ -102,7 +87,6 @@ server=naturalsalon.vn; Pooling=False;Connect Timeout=3000;"
 		<validation validateIntegratedModeConfiguration="false"/>
 		<modules runAllManagedModulesForAllRequests="true">
 			<!--<add name="ScriptModule" preCondition="managedHandler" type="System.Web.Handlers.ScriptModule, System.Web.Extensions, Version=3.5.0.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35" />-->
-			<add name="reWriter" type="Intelligencia.UrlRewriter.RewriterHttpModule"/>
 		</modules>
 		<handlers>
 			<add name="*.plugin" path="*.plugin" verb="*" type="linh.httpModule.defaultHandle, linh.httpModule" resourceType="Unspecified" preCondition="integratedMode"/>
@@ -118,58 +102,15 @@ server=naturalsalon.vn; Pooling=False;Connect Timeout=3000;"
 				</requestLimits>
 			</requestFiltering>
 		</security>
+    <rewrite>
+      <rules>
+        <rule name="NameToRewrite" enabled="true">
+          <match url="^song/([_0-9a-z-]+)" />
+          <action type="Rewrite" url="/lib/pages/Default.aspx?ID={R:1}" />
+        </rule>
+      </rules>
+    </rewrite>
+    
 	</system.webServer>
-  <rewriter>
-    <rewrite url="^(/.+(\.gif|\.png|\.jpg|\.ico|\.aspx|\.asmx|\.ashx|\.pdf|\.css|\.js)(\?.+)?)$" to="$1" processing="stop"/>
-    <rewrite url="^~/$" to="~/lib/pages/Default.aspx" processing="stop"/>
-    <rewrite url="~/lib/(.*)" to="~/lib/$1" processing="stop"/>
-    <if url=".html$">
-    </if>
-    <if url="/$">
-      <!--<rewrite url="^~/(.+)/$" to="~/lib/pages/Default.aspx?pages=$1" processing="stop"/>-->
-
-      <rewrite url="~/XacNhan/(.+)/" to="~/lib/admin/.plugin?ref=0.1701823388883157&amp;act=loadPlug&amp;rqPlug=docsoft.plugin.hethong.thanhvien.Class1,%20docsoft.plugin.hethong.thanhvien&amp;subAct=active&amp;ID=$1" processing="stop"/>
-      
-      <rewrite url="~/Products/(.+)/(\d*)/" to="~/lib/pages/Default.aspx?pages=Hang-hoa-dm&amp;DM_Ma=$1&amp;page=$2" processing="stop"/>
-      <rewrite url="~/Products/(.+)/(.+)/" to="~/lib/pages/Default.aspx?pages=Hang-hoa-dm&amp;DM_Ma=$1&amp;sort=$2" processing="stop"/>
-      <rewrite url="~/Products/(.+)/" to="~/lib/pages/Default.aspx?pages=Hang-hoa-dm&amp;DM_Ma=$1" processing="stop"/>
-
-      <rewrite url="~/About-us/(.+)/$" to="~/lib/pages/Default.aspx?pages=About-us&amp;DM_Ma=$1" processing="stop"/>
-      
-      <rewrite url="~/Products/" to="~/lib/pages/Default.aspx?pages=Hang-hoa" processing="stop"/>
-      <rewrite url="~/Tin-tuc/(.+)/(\d*)/" to="~/lib/pages/Default.aspx?pages=Tin-tuc&amp;DM_Ma=$1&amp;page=$2" processing="stop"/>
-      <rewrite url="~/Tin-tuc/(\d*)/" to="~/lib/pages/Default.aspx?pages=Tin-tuc&amp;page=$1" processing="stop"/>
-      <rewrite url="~/Tin-tuc/(.+)/" to="~/lib/pages/Default.aspx?pages=Tin-tuc&amp;DM_Ma=$1" processing="stop"/>
-      <rewrite url="~/Tin-tuc/" to="~/lib/pages/Default.aspx?pages=Tin-tuc" processing="stop"/>
-
-      <rewrite url="~/(.+)/" to="~/lib/pages/Default.aspx?pages=$1" processing="stop"/>
-    </if>
-    <if url=".xml$">
-      <rewrite url="/Sitemap(\d*).xml" to="~/sitemaps.aspx?page=$1" processing="stop"/>
-      <rewrite url="/Sitemap.xml" to="~/sitemaps.aspx"/>
-    </if>
-    <if url=".rss$">
-      <rewrite url="~/rss/(.+)/(.+).rss" to="~/lib/pages/rss.aspx?DM_Ten=$1&amp;CM_Ten=$2" processing="stop"/>
-      <rewrite url="~/rss/(.+).rss" to="~/lib/pages/rss.aspx?DM_Ten=$1" processing="stop"/>
-      <rewrite url="~/topic/(\d*).rss" to="~/topic-rss.aspx?ID=$1" processing="stop"/>
-      <rewrite url="~/rss.rss" to="~/lib/pages/rss.aspx"/>
-      <rewrite url="~/u/(.+).rss" to="~/u-rss.aspx?Username=$1" processing="stop"/>
-    </if>
-    <if url=".html$">
-      <rewrite url="~/Products/(.*)/(.*)/(.*).html" to="~/lib/pages/Default.aspx?pages=Hang-hoa-view&amp;HH-ID=$3" processing="stop"/>
-      <rewrite url="~/Tin-tuc/(.*)/(.*)/(.*).html" to="~/lib/pages/Default.aspx?pages=Tin-tuc-view&amp;TIN-ID=$3" processing="stop"/>
-      <rewrite url="~/Album-Danh-sach/(.+).html" to="~/lib/pages/Default.aspx?pages=Album-view&amp;VID=$1" processing="stop"/>
-
-      <rewrite url="~/Desk-Dich-Vu/(.*).html" to="~/lib/pages/Default.aspx?pages=View-Dich-vu&amp;VID=$1" processing="stop"/>
-      <rewrite url="~/(\d*).html$" to="~/lib/pages/Default.aspx?pages=m&amp;id=$1" processing="stop"/>
-    </if>
-    <if url=".topic$">
-      <rewrite url="~/topic/(.+)/(\d*).topic" to="~/topic.aspx?ID=$2" processing="stop"/>
-    </if>
-    <if url=".clip$">
-      <rewrite url="~/clip/(.+)/(\d*).topic" to="~/clip.aspx?ID=$2" processing="stop"/>
-    </if>
-    <rewrite url="~/WebResource.axd(.+)" to="~/WebResource.axd$1" processing="stop"/>
-    <rewrite url="~/(.+)" to="~/lib/pages/Default.aspx?Nick=$1" processing="stop"/>
-  </rewriter>
+  
 </configuration>
