--- a/web/web.config
+++ b/web/web.config
@@ -1,4 +1,4 @@
-<?xml version="1.0"?>
+<?xml version="1.0" encoding="UTF-8"?>
 <!--
     Note: As an alternative to hand editing this file you can use the 
     web admin tool to configure settings for your application. Use
@@ -9,7 +9,7 @@
 -->
 <configuration>
 	<configSections>
-		<section name="ElFinder" type="ElFinder.Connector.Configuration.ElFinderSection" allowDefinition="Everywhere" allowExeDefinition="MachineToApplication" restartOnExternalChanges="true"/>
+		<section name="ElFinder" type="ElFinder.Connector.Configuration.ElFinderSection" allowDefinition="Everywhere" allowExeDefinition="MachineToApplication" restartOnExternalChanges="true" />
 		<!--<section name="rewriter" requirePermission="false" type="Intelligencia.UrlRewriter.Configuration.RewriterConfigurationSectionHandler, Intelligencia.UrlRewriter"/>-->
 	</configSections>
 	<appSettings>
@@ -39,9 +39,9 @@ server=naturalsalon.vn; Pooling=False;Connect Timeout=3000;"
 				<add assembly="Microsoft.ReportViewer.Common, Version=10.0.0.0, Culture=neutral, PublicKeyToken=B03F5F7F11D50A3A"/>
 				--><!--<add assembly="stdole, Version=7.0.3300.0, Culture=neutral, PublicKeyToken=B03F5F7F11D50A3A"/>--><!--
 				<add assembly="Microsoft.ReportViewer.WinForms, Version=10.0.0.0, Culture=neutral, PublicKeyToken=B03F5F7F11D50A3A"/>-->
-				<add assembly="Microsoft.Build.Framework, Version=4.0.0.0, Culture=neutral, PublicKeyToken=B03F5F7F11D50A3A"/>
-				<add assembly="System.Management, Version=4.0.0.0, Culture=neutral, PublicKeyToken=B03F5F7F11D50A3A"/>
-				<add assembly="System.Xml.Linq, Version=4.0.0.0, Culture=neutral, PublicKeyToken=B77A5C561934E089"/></assemblies>
+				<add assembly="Microsoft.Build.Framework, Version=4.0.0.0, Culture=neutral, PublicKeyToken=B03F5F7F11D50A3A" />
+				<add assembly="System.Management, Version=4.0.0.0, Culture=neutral, PublicKeyToken=B03F5F7F11D50A3A" />
+				<add assembly="System.Xml.Linq, Version=4.0.0.0, Culture=neutral, PublicKeyToken=B77A5C561934E089" /></assemblies>
 			<!--<buildProviders>
 				<add extension=".rdlc" type="Microsoft.Reporting.RdlBuildProvider, Microsoft.ReportViewer.WebForms, Version=10.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a"/>
 			</buildProviders>-->
@@ -51,7 +51,7 @@ server=naturalsalon.vn; Pooling=False;Connect Timeout=3000;"
           of the security authentication mode used by 
           ASP.NET to identify an incoming user. 
         -->
-		<authentication mode="Forms"/>
+		<authentication mode="Forms" />
 		<!--
            The <customErrors> section enables configuration 
            of what to do if/when an unhandled error occurs 
@@ -64,9 +64,9 @@ server=naturalsalon.vn; Pooling=False;Connect Timeout=3000;"
              <error statusCode="404" redirect="FileNotFound.htm" />
            </customErrors>
         -->
-		<customErrors mode="Off"/>
-		<httpRuntime executionTimeout="90" maxRequestLength="409600" useFullyQualifiedRedirectUrl="false" minFreeThreads="8" minLocalRequestFreeThreads="4" appRequestQueueLimit="100" enableVersionHeader="true" requestValidationMode="2.0"/>
-		<pages renderAllHiddenFieldsAtTopOfForm="false"  validateRequest="false" controlRenderingCompatibilityVersion="3.5" clientIDMode="AutoID" enableEventValidation="false" enableViewState="false" viewStateEncryptionMode ="Never">
+		<customErrors mode="Off" />
+		<httpRuntime executionTimeout="90" maxRequestLength="409600" useFullyQualifiedRedirectUrl="false" minFreeThreads="8" minLocalRequestFreeThreads="4" appRequestQueueLimit="100" enableVersionHeader="true" requestValidationMode="2.0" />
+		<pages renderAllHiddenFieldsAtTopOfForm="false" validateRequest="false" controlRenderingCompatibilityVersion="3.5" clientIDMode="AutoID" enableEventValidation="false" enableViewState="false" viewStateEncryptionMode="Never">
 			<controls>
 				<!-- begin gian hang control-->
 				<!--<add assembly="plugin.agromart.doanhNghiep.thongTin" namespace="plugin.agromart.doanhNghiep.thongTin" tagPrefix="GianHang" />-->
@@ -75,8 +75,8 @@ server=naturalsalon.vn; Pooling=False;Connect Timeout=3000;"
 		</pages>
 		<httpHandlers>
 			<!--<add path="Reserved.ReportViewerWebControl.axd" verb="*" type="Microsoft.Reporting.WebForms.HttpHandler, Microsoft.ReportViewer.WebForms, Version=10.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" validate="false"/>-->
-			<add verb="*" path="*.plugin" type="linh.httpModule.defaultHandle, linh.httpModule"/>
-			<add verb="*" path="*.captcha" type="linh.httpModule.Captcha, linh.httpModule"/>
+			<add verb="*" path="*.plugin" type="linh.httpModule.defaultHandle, linh.httpModule" />
+			<add verb="*" path="*.captcha" type="linh.httpModule.Captcha, linh.httpModule" />
 		</httpHandlers>
 	</system.web>
 	<!-- 
@@ -84,20 +84,20 @@ server=naturalsalon.vn; Pooling=False;Connect Timeout=3000;"
         Information Services 7.0.  It is not necessary for previous version of IIS.
     -->
 	<system.webServer>
-		<validation validateIntegratedModeConfiguration="false"/>
+		<validation validateIntegratedModeConfiguration="false" />
 		<modules runAllManagedModulesForAllRequests="true">
 			<!--<add name="ScriptModule" preCondition="managedHandler" type="System.Web.Handlers.ScriptModule, System.Web.Extensions, Version=3.5.0.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35" />-->
 		</modules>
 		<handlers>
-			<add name="*.plugin" path="*.plugin" verb="*" type="linh.httpModule.defaultHandle, linh.httpModule" resourceType="Unspecified" preCondition="integratedMode"/>
-			<add name="*.captcha" path="*.captcha" verb="*" type="linh.httpModule.Captcha, linh.httpModule" resourceType="Unspecified" preCondition="integratedMode"/>
+			<add name="*.plugin" path="*.plugin" verb="*" type="linh.httpModule.defaultHandle, linh.httpModule" resourceType="Unspecified" preCondition="integratedMode" />
+			<add name="*.captcha" path="*.captcha" verb="*" type="linh.httpModule.Captcha, linh.httpModule" resourceType="Unspecified" preCondition="integratedMode" />
 			<!--<add name="ReportViewerWebControlHandler" preCondition="integratedMode" verb="*" path="Reserved.ReportViewerWebControl.axd" type="Microsoft.Reporting.WebForms.HttpHandler, Microsoft.ReportViewer.WebForms, Version=10.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a"/>-->
 		</handlers>
 		<security>
 			<requestFiltering>
 				<requestLimits maxQueryString="209715200" maxAllowedContentLength="209715200" maxUrl="209715200">
 					<headerLimits>
-						<add header="Content-type" sizeLimit="209715200"/>
+						<add header="Content-type" sizeLimit="209715200" />
 					</headerLimits>
 				</requestLimits>
 			</requestFiltering>
@@ -105,8 +105,20 @@ server=naturalsalon.vn; Pooling=False;Connect Timeout=3000;"
     <rewrite>
       <rules>
         <rule name="NameToRewrite" enabled="true">
-          <match url="^song/([_0-9a-z-]+)" />
-          <action type="Rewrite" url="/lib/pages/Default.aspx?ID={R:1}" />
+          <match url="^Register/" />
+          <action type="Rewrite" url="/html/Register.aspx" />
+        </rule>
+        <rule name="Home page">
+            <match url="^/?$" />
+            <action type="Rewrite" url="/html/Default.aspx" />
+        </rule>
+        <rule name="User profile">
+            <match url="^user/([_0-9a-z-]+)$" />
+            <action type="Rewrite" url="/html/Profile.aspx?u={R:1}" />
+        </rule>
+        <rule name="User Account">
+            <match url="^acc/$" />
+            <action type="Rewrite" url="/html/MyAccount.aspx" />
         </rule>
       </rules>
     </rewrite>
