--- a/web/web.config
+++ b/web/web.config
@@ -120,6 +120,25 @@ server=naturalsalon.vn; Pooling=False;Connect Timeout=3000;"
             <match url="^acc/$" />
             <action type="Rewrite" url="/html/MyAccount.aspx" />
         </rule>
+          <rule name="Add car" enabled="true">
+              <match url="^cars/add/$" />
+              <action type="Rewrite" url="/html/AddCar.aspx" />
+          </rule>
+          <rule name="Edit car" enabled="true">
+              <match url="^cars/edit/([0-9]+)/$" />
+              <action type="Rewrite" url="/html/AddCar.aspx?ID={R:1}" />
+          </rule>
+
+          <rule name="View car" enabled="true">
+              <match url="^cars/([_0-9a-z-]+)/([_0-9a-z-]+)/([_0-9a-z-]+)/([0-9]+)/$" />
+              <action type="Rewrite" url="/html/car-view.aspx?ID={R:4}" />
+          </rule>
+          
+          <rule name="My car" enabled="true">
+              <match url="^my-cars/$" />
+              <action type="Rewrite" url="/html/MyCars.aspx" />
+          </rule>
+          
       </rules>
     </rewrite>
     
