--- a/core/docsoft.entities/docsoft.entities.csproj
+++ b/core/docsoft.entities/docsoft.entities.csproj
@@ -53,6 +53,9 @@
     <Compile Include="Album.cs" />
     <Compile Include="Anh.cs" />
     <Compile Include="BinhLuan.cs" />
+    <Compile Include="XeYeuThich.cs" />
+    <Compile Include="PmRoom.cs" />
+    <Compile Include="PM.cs" />
     <Compile Include="Obj.cs" />
     <Compile Include="ObjMember.cs" />
     <Compile Include="Xe.cs" />
