--- a/web/web.config
+++ b/web/web.config
@@ -120,6 +120,10 @@ server=naturalsalon.vn; Pooling=False;Connect Timeout=3000;"
             <match url="^acc/$" />
             <action type="Rewrite" url="/html/MyAccount.aspx" />
         </rule>
+        <rule name="Pm">
+            <match url="^pm/$" />
+            <action type="Rewrite" url="/html/Inbox.aspx" />
+        </rule>
           <rule name="Add car" enabled="true">
               <match url="^cars/add/$" />
               <action type="Rewrite" url="/html/AddCar.aspx" />
