--- a/web/web.config
+++ b/web/web.config
@@ -104,22 +104,34 @@ server=naturalsalon.vn; Pooling=False;Connect Timeout=3000;"
 		</security>
     <rewrite>
       <rules>
-        <rule name="NameToRewrite" enabled="true">
-          <match url="^Register/" />
+        <rule name="Register" enabled="true">
+          <match url="^Register/$" />
           <action type="Rewrite" url="/html/Register.aspx" />
         </rule>
+          <rule name="Register Success" enabled="true">
+              <match url="^Register-Success/$" />
+              <action type="Rewrite" url="/html/RegisterDone.aspx" />
+          </rule>
         <rule name="Home page">
             <match url="^/?$" />
             <action type="Rewrite" url="/html/Default.aspx" />
         </rule>
         <rule name="User profile">
-            <match url="^user/([_0-9a-z-]+)$" />
+            <match url="^user/([^/]+)$" />
             <action type="Rewrite" url="/html/Profile.aspx?u={R:1}" />
         </rule>
         <rule name="User Account">
             <match url="^acc/$" />
             <action type="Rewrite" url="/html/MyAccount.aspx" />
         </rule>
+        <rule name="Recover password">
+            <match url="^Recover/$" />
+            <action type="Rewrite" url="/html/Recover.aspx" />
+        </rule>
+          <rule name="Recover password pages">
+              <match url="^Recover/([0-9]+)/([0-9]+)/$$" />
+              <action type="Rewrite" url="/html/Recover.aspx?ID={R:1}&amp;Key={R:2}" />
+          </rule>
         <rule name="Pm">
             <match url="^pm/$" />
             <action type="Rewrite" url="/html/Inbox.aspx" />
@@ -142,7 +154,10 @@ server=naturalsalon.vn; Pooling=False;Connect Timeout=3000;"
               <match url="^my-cars/$" />
               <action type="Rewrite" url="/html/MyCars.aspx" />
           </rule>
-          
+          <rule name="Active Email" enabled="true">
+              <match url="^Xac-nhan/([0-9]+)/([0-9]+)/$" />
+              <action type="Rewrite" url="/html/ActiveEmail.aspx?ID={R:1}&amp;Key={R:2}" />
+          </rule>
       </rules>
     </rewrite>
     
