--- a/plugin/heThong/docsoft.plugin.hethong.thanhvien/docsoft.plugin.hethong.thanhvien.csproj
+++ b/plugin/heThong/docsoft.plugin.hethong.thanhvien/docsoft.plugin.hethong.thanhvien.csproj
@@ -90,6 +90,12 @@
   <ItemGroup>
     <EmbeddedResource Include="thongTinCaNhan.htm" />
   </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Xetui-email-welcome.html" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Lay-lai-mat-khau.html" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
