--- a/web/web.config
+++ b/web/web.config
@@ -145,6 +145,11 @@ server=naturalsalon.vn; Pooling=False;Connect Timeout=3000;"
               <action type="Rewrite" url="/html/AddCar.aspx?ID={R:1}" />
           </rule>
 
+        <rule name="Add blog" enabled="true">
+              <match url="^blogs/add/$" />
+              <action type="Rewrite" url="/html/BlogAdd.aspx" />
+          </rule>
+          
           <rule name="View car" enabled="true">
               <match url="^cars/([_0-9a-z-]+)/([_0-9a-z-]+)/([_0-9a-z-]+)/([0-9]+)/$" />
               <action type="Rewrite" url="/html/car-view.aspx?ID={R:4}" />
