--- a/core/docsoft.entities/docsoft.entities.csproj
+++ b/core/docsoft.entities/docsoft.entities.csproj
@@ -53,6 +53,7 @@
     <Compile Include="Album.cs" />
     <Compile Include="Anh.cs" />
     <Compile Include="BinhLuan.cs" />
+    <Compile Include="Blog.cs" />
     <Compile Include="Thich.cs" />
     <Compile Include="PmRoom.cs" />
     <Compile Include="PM.cs" />
