--- a/web/web.config
+++ b/web/web.config
@@ -90,6 +90,11 @@ server=naturalsalon.vn; Pooling=False;Connect Timeout=3000;"
               <match url="^user/([^/]+)/followers$" />
               <action type="Rewrite" url="/html/Profile-Fans.aspx?u={R:1}" />
           </rule>
+        
+        <rule name="User profile liked car" enabled="true">
+              <match url="^user/([^/]+)/cars$" />
+              <action type="Rewrite" url="/html/Profiile-LikedCars.aspx?u={R:1}" />
+          </rule>
           
           <rule name="User profile">
             <match url="^user/([^/]+)$" />
