--- a/web/web.config
+++ b/web/web.config
@@ -127,6 +127,26 @@ server=naturalsalon.vn; Pooling=False;Connect Timeout=3000;"
               <action type="Rewrite" url="/html/AddCar.aspx?ID={R:1}" />
           </rule>
 
+        
+        <rule name="Add Nhom" enabled="true">
+              <match url="^group/add/$" />
+              <action type="Rewrite" url="/html/NhomAdd.aspx" />
+          </rule>
+          <rule name="Edit Nhom" enabled="true">
+              <match url="^group/edit/([0-9]+)/$" />
+              <action type="Rewrite" url="/html/NhomAdd.aspx?ID={R:1}" />
+          </rule>  
+        
+         <rule name="Nhom view" enabled="true" stopProcessing="true">
+              <match url="^group/([^/]+)/([0-9]+)/$" />
+              <action type="Rewrite" url="/html/NhomHome.aspx?ID={R:2}" />
+          </rule>
+          
+           <rule name="Nhom" enabled="true">
+              <match url="^group/$" />
+              <action type="Rewrite" url="/html/Nhom.aspx" />
+          </rule>  
+        
         <rule name="Add blog" enabled="true">
               <match url="^blogs/add/$" />
               <action type="Rewrite" url="/html/BlogAdd.aspx" />
