--- a/web/web.config
+++ b/web/web.config
@@ -135,8 +135,29 @@ server=naturalsalon.vn; Pooling=False;Connect Timeout=3000;"
           <rule name="Edit Nhom" enabled="true">
               <match url="^group/edit/([0-9]+)/$" />
               <action type="Rewrite" url="/html/NhomAdd.aspx?ID={R:1}" />
-          </rule>  
-        
+          </rule>
+
+          <rule name="Nhom blog add" enabled="true" stopProcessing="true">
+              <match url="^group/([^/]+)/([0-9]+)/blogs/add/$" />
+              <action type="Rewrite" url="/html/BlogAdd.aspx?PID_ID={R:2}&amp;Loai=3" />
+          </rule>
+
+          <rule name="Nhom blog edit" enabled="true" stopProcessing="true">
+              <match url="^group/([^/]+)/([0-9]+)/blogs/edit/([0-9]+)/$" />
+              <action type="Rewrite" url="/html/BlogAdd.aspx?PID_ID={R:2}&amp;Loai=3&amp;ID={R:3}" />
+          </rule>
+
+          <rule name="Nhom blog view" enabled="true" stopProcessing="true">
+              <match url="^group/([^/]+)/([0-9]+)/blogs/([0-9]+)/$" />
+              <action type="Rewrite" url="/html/NhomBlogView.aspx?ID={R:3}&amp;Loai=3" />
+          </rule>
+          
+          <rule name="Nhom blog list" enabled="true" stopProcessing="true">
+              <match url="^group/([^/]+)/([0-9]+)/blogs/$" />
+              <action type="Rewrite" url="/html/NhomBlogs.aspx?PID_ID={R:2}&amp;Loai=3" />
+          </rule>
+          
+          
          <rule name="Nhom view" enabled="true" stopProcessing="true">
               <match url="^group/([^/]+)/([0-9]+)/$" />
               <action type="Rewrite" url="/html/NhomHome.aspx?ID={R:2}" />
@@ -146,7 +167,7 @@ server=naturalsalon.vn; Pooling=False;Connect Timeout=3000;"
               <match url="^group/$" />
               <action type="Rewrite" url="/html/Nhom.aspx" />
           </rule>  
-        
+          
         <rule name="Add blog" enabled="true">
               <match url="^blogs/add/$" />
               <action type="Rewrite" url="/html/BlogAdd.aspx" />
