--- a/web/web.config
+++ b/web/web.config
@@ -62,10 +62,7 @@ server=naturalsalon.vn; Pooling=False;Connect Timeout=3000;"
               <match url="^Register-Success/$" />
               <action type="Rewrite" url="/html/RegisterDone.aspx" />
           </rule>
-        <rule name="Home page">
-            <match url="^/?$" />
-            <action type="Rewrite" url="/html/Default.aspx" />
-        </rule>
+        
 
           <rule name="Add User blog" enabled="true" stopProcessing="true">
               <match url="^user/([^/]+)/blogs/add/$" />
@@ -205,6 +202,21 @@ server=naturalsalon.vn; Pooling=False;Connect Timeout=3000;"
           <rule name="Active Email" enabled="true">
               <match url="^Xac-nhan/([0-9]+)/([0-9]+)/$" />
               <action type="Rewrite" url="/html/ActiveEmail.aspx?ID={R:1}&amp;Key={R:2}" />
+          </rule>
+
+          <rule name="Lib folder">
+              <match url="^lib/(.*)" />
+              <action type="Rewrite" url="/lib/{R:1}" />
+          </rule>
+          
+          <rule name="Home page">
+              <match url="^/?$" />
+              <action type="Rewrite" url="/html/Default.aspx" />
+          </rule>
+          
+          <rule name="Alias page">
+              <match url="^([^/]+)" />
+              <action type="Rewrite" url="/html/Default.aspx?Alias={R:1}" />
           </rule>
       </rules>
     </rewrite>
