--- a/web/web.config
+++ b/web/web.config
@@ -154,6 +154,10 @@ server=naturalsalon.vn; Pooling=False;Connect Timeout=3000;"
               <action type="Rewrite" url="/html/NhomBlogs.aspx?PID_ID={R:2}&amp;Loai=3" />
           </rule>
           
+        <rule name="Nhom admin" enabled="true" stopProcessing="true">
+              <match url="^group/([^/]+)/([0-9]+)/admin/$" />
+              <action type="Rewrite" url="/html/NhomAdmin.aspx?ID={R:2}" />
+          </rule>
           
          <rule name="Nhom view" enabled="true" stopProcessing="true">
               <match url="^group/([^/]+)/([0-9]+)/$" />
@@ -204,6 +208,12 @@ server=naturalsalon.vn; Pooling=False;Connect Timeout=3000;"
               <action type="Rewrite" url="/html/ActiveEmail.aspx?ID={R:1}&amp;Key={R:2}" />
           </rule>
 
+        <rule name="Login page">
+          <match url="^Login/?$" />
+          <action type="Rewrite" url="/html/Login.aspx" />
+        </rule>
+        
+        
           <rule name="Lib folder">
               <match url="^lib/(.*)" />
               <action type="Rewrite" url="/lib/{R:1}" />
