--- a/web/web.config
+++ b/web/web.config
@@ -138,27 +138,40 @@ server=naturalsalon.vn; Pooling=False;Connect Timeout=3000;"
               <match url="^group/([^/]+)/([0-9]+)/blogs/add/$" />
               <action type="Rewrite" url="/html/BlogAdd.aspx?PID_ID={R:2}&amp;Loai=3" />
           </rule>
-
           <rule name="Nhom blog edit" enabled="true" stopProcessing="true">
               <match url="^group/([^/]+)/([0-9]+)/blogs/edit/([0-9]+)/$" />
               <action type="Rewrite" url="/html/BlogAdd.aspx?PID_ID={R:2}&amp;Loai=3&amp;ID={R:3}" />
           </rule>
-
           <rule name="Nhom blog view" enabled="true" stopProcessing="true">
               <match url="^group/([^/]+)/([0-9]+)/blogs/([0-9]+)/$" />
               <action type="Rewrite" url="/html/NhomBlogView.aspx?ID={R:3}&amp;Loai=3" />
           </rule>
-          
           <rule name="Nhom blog list" enabled="true" stopProcessing="true">
               <match url="^group/([^/]+)/([0-9]+)/blogs/$" />
               <action type="Rewrite" url="/html/NhomBlogs.aspx?PID_ID={R:2}&amp;Loai=3" />
+          </rule>
+          
+          <rule name="Nhom forum add" enabled="true" stopProcessing="true">
+              <match url="^group/([^/]+)/([0-9]+)/forum/add/$" />
+              <action type="Rewrite" url="/html/BlogAdd.aspx?PID_ID={R:2}&amp;Loai=4" />
+          </rule>
+          <rule name="Nhom forum edit" enabled="true" stopProcessing="true">
+              <match url="^group/([^/]+)/([0-9]+)/forum/edit/([0-9]+)/$" />
+              <action type="Rewrite" url="/html/BlogAdd.aspx?PID_ID={R:2}&amp;Loai=4&amp;ID={R:3}" />
+          </rule>
+          <rule name="Nhom forum view" enabled="true" stopProcessing="true">
+              <match url="^group/([^/]+)/([0-9]+)/forum/([0-9]+)/$" />
+              <action type="Rewrite" url="/html/NhomForumView.aspx?ID={R:3}&amp;Loai=4" />
+          </rule>
+          <rule name="Nhom forum list" enabled="true" stopProcessing="true">
+              <match url="^group/([^/]+)/([0-9]+)/forum/$" />
+              <action type="Rewrite" url="/html/NhomForum.aspx?PID_ID={R:2}&amp;Loai=4" />
           </rule>
           
         <rule name="Nhom admin" enabled="true" stopProcessing="true">
               <match url="^group/([^/]+)/([0-9]+)/admin/$" />
               <action type="Rewrite" url="/html/NhomAdmin.aspx?ID={R:2}" />
           </rule>
-          
          <rule name="Nhom view" enabled="true" stopProcessing="true">
               <match url="^group/([^/]+)/([0-9]+)/$" />
               <action type="Rewrite" url="/html/NhomHome.aspx?ID={R:2}" />
@@ -217,6 +230,10 @@ server=naturalsalon.vn; Pooling=False;Connect Timeout=3000;"
           <rule name="Lib folder">
               <match url="^lib/(.*)" />
               <action type="Rewrite" url="/lib/{R:1}" />
+          </rule>
+          <rule name="Html folder">
+              <match url="^html/(.*)" />
+              <action type="Rewrite" url="/html/{R:1}" />
           </rule>
           
           <rule name="Home page">
