--- a/web/web.config
+++ b/web/web.config
@@ -187,28 +187,45 @@ server=naturalsalon.vn; Pooling=False;Connect Timeout=3000;"
               <action type="Rewrite" url="/html/BlogAdd.aspx" />
           </rule>
           
+        
+        
+          <rule name="Car Model xe" enabled="true" stopProcessing="true">
+              <match url="^cars/([^/]+)/([^/]+)/$" />
+              <action type="Rewrite" url="/html/CarByModelXe.aspx?Ten={R:2}" />
+          </rule> 
+          
+          <rule name="Car Hang xe" enabled="true" stopProcessing="true">
+              <match url="^cars/([^/]+)/$" />
+              <action type="Rewrite" url="/html/CarByHangXe.aspx?Ten={R:1}" />
+          </rule> 
+          
+        
           <rule name="Add car blog" enabled="true" stopProcessing="true">
-              <match url="^cars/([_0-9a-z-]+)/([_0-9a-z-]+)/([_0-9a-z-]+)/([0-9]+)/blogs/add/$" />
+              <match url="^cars/([^/]+)/([^/]+)/([^/]+)/([0-9]+)/blogs/add/$" />
               <action type="Rewrite" url="/html/BlogAdd.aspx?PID_ID={R:4}&amp;Loai=2" />
           </rule>
           <rule name="Edit car blog" enabled="true" stopProcessing="true">
-              <match url="^cars/([_0-9a-z-]+)/([_0-9a-z-]+)/([_0-9a-z-]+)/([0-9]+)/blogs/edit/([0-9]+)/$" />
+              <match url="^cars/([^/]+)/([^/]+)/([^/]+)/([0-9]+)/blogs/edit/([0-9]+)/$" />
               <action type="Rewrite" url="/html/BlogAdd.aspx?PID_ID={R:4}&amp;Loai=2&amp;ID={R:5}" />
           </rule>
-
+          
+           
+        
+          
           <rule name="Car blog view" enabled="true">
-              <match url="^cars/([_0-9a-z-]+)/([_0-9a-z-]+)/([_0-9a-z-]+)/([0-9]+)/blogs/([0-9]+)/$" />
+              <match url="^cars/([^/]+)/([^/]+)/([^/]+)/([0-9]+)/blogs/([0-9]+)/$" />
               <action type="Rewrite" url="/html/car-blog-view.aspx?PID_ID={R:4}&amp;Loai=2&amp;ID={R:5}" />
           </rule>
           <rule name="Car blog" enabled="true">
-              <match url="^cars/([_0-9a-z-]+)/([_0-9a-z-]+)/([_0-9a-z-]+)/([0-9]+)/blogs/$" />
+              <match url="^cars/([^/]+)/([^/]+)/([^/]+)/([0-9]+)/blogs/$" />
               <action type="Rewrite" url="/html/car-blog.aspx?PID_ID={R:4}&amp;Loai=2" />
           </rule>
 
+         
 
 
           <rule name="View car" enabled="true">
-              <match url="^cars/([_0-9a-z-]+)/([_0-9a-z-]+)/([_0-9a-z-]+)/([0-9]+)/$" />
+              <match url="^cars/([^/]+)/([^/]+)/([^/]+)/([0-9]+)/$" />
               <action type="Rewrite" url="/html/car-view.aspx?ID={R:4}" />
           </rule>
           
