--- a/web/web.config
+++ b/web/web.config
@@ -58,6 +58,12 @@ server=naturalsalon.vn; Pooling=False;Connect Timeout=3000;"
           <match url="^Register/$" />
           <action type="Rewrite" url="/html/Register.aspx" />
         </rule>
+        
+          <rule name="Login" enabled="true">
+          <match url="^login/$" />
+          <action type="Rewrite" url="/html/Login.aspx" />
+        </rule>
+          
           <rule name="Register Success" enabled="true">
               <match url="^Register-Success/$" />
               <action type="Rewrite" url="/html/RegisterDone.aspx" />
