--- a/web/web.config
+++ b/web/web.config
@@ -63,6 +63,11 @@ server=naturalsalon.vn; Pooling=False;Connect Timeout=3000;"
           <match url="^login/$" />
           <action type="Rewrite" url="/html/Login.aspx" />
         </rule>
+
+          <rule name="Search" enabled="true">
+              <match url="^search/$" />
+              <action type="Rewrite" url="/html/search.aspx" />
+          </rule>
           
           <rule name="Register Success" enabled="true">
               <match url="^Register-Success/$" />
