--- a/web/web.config
+++ b/web/web.config
@@ -64,6 +64,12 @@ server=naturalsalon.vn; Pooling=False;Connect Timeout=3000;"
           <action type="Rewrite" url="/html/Login.aspx" />
         </rule>
 
+        <rule name="About us" enabled="true">
+          <match url="^About/([^/]+)/$" />
+          <action type="Rewrite" url="/html/AboutUs.aspx" />
+        </rule>
+        
+        
           <rule name="Search" enabled="true">
               <match url="^search/$" />
               <action type="Rewrite" url="/html/search.aspx" />
@@ -254,7 +260,10 @@ server=naturalsalon.vn; Pooling=False;Connect Timeout=3000;"
           <action type="Rewrite" url="/html/Login.aspx" />
         </rule>
         
-        
+        <rule name="WebResource">
+              <match url="^WebResource.axd(.*)" />
+              <action type="Rewrite" url="/WebResource.axd{R:1}" />
+          </rule>
           <rule name="Lib folder">
               <match url="^lib/(.*)" />
               <action type="Rewrite" url="/lib/{R:1}" />
