--- a/web/web.config
+++ b/web/web.config
@@ -209,7 +209,17 @@
               <match url="^blogs/add/$" />
               <action type="Rewrite" url="/html/BlogAdd.aspx" />
           </rule>
-          
+
+
+          <rule name="Car newest" enabled="true" stopProcessing="true">
+              <match url="^cars/newest/$" />
+              <action type="Rewrite" url="/html/CarsNewest.aspx" />
+          </rule>
+
+          <rule name="Car top" enabled="true" stopProcessing="true">
+              <match url="^cars/top/$" />
+              <action type="Rewrite" url="/html/CarsTop.aspx" />
+          </rule>
         
         
           <rule name="Car Model xe" enabled="true" stopProcessing="true">
@@ -220,9 +230,16 @@
           <rule name="Car Hang xe" enabled="true" stopProcessing="true">
               <match url="^cars/([^/]+)/$" />
               <action type="Rewrite" url="/html/CarByHangXe.aspx?Ten={R:1}" />
-          </rule> 
+          </rule>
+
           
-        
+          
+          <rule name="Car all" enabled="true" stopProcessing="true">
+              <match url="^cars/$" />
+              <action type="Rewrite" url="/html/Cars.aspx" />
+          </rule>
+
+
           <rule name="Add car blog" enabled="true" stopProcessing="true">
               <match url="^cars/([^/]+)/([^/]+)/([^/]+)/([0-9]+)/blogs/add/$" />
               <action type="Rewrite" url="/html/BlogAdd.aspx?PID_ID={R:4}&amp;Loai=2" />
