--- a/web/web.config
+++ b/web/web.config
@@ -60,6 +60,17 @@
 		</security>
     <rewrite>
       <rules>
+        
+        <rule name="Prevent image hotlinking">
+          <match url=".*\.(gif|jpg|png|jpeg|bmp)$"/>
+          <!--<conditions>
+            <add input="{HTTP_REFERER}" pattern="^$" negate="true" />
+            <add input="{HTTP_REFERER}" pattern="^http://ruslany\.net/.*$" negate="true" />
+          </conditions>
+          <action type="Rewrite" url="/images/say_no_to_hotlinking.jpg" />-->
+        <action type="Rewrite" url="/lib/handler/Images.ashx?path={R:0}" />
+        </rule>
+          
         <rule name="Register" enabled="true">
           <match url="^Register/$" />
           <action type="Rewrite" url="/html/Register.aspx" />
