--- a/web/web.config
+++ b/web/web.config
@@ -261,7 +261,10 @@
           </rule>
           
            
-        
+        <rule name="Show all comment" enabled="true" stopProcessing="true">
+              <match url="^comments/([^/]+)/$" />
+              <action type="Rewrite" url="/html/BinhLuanAll.aspx?ID={R:1}" />
+          </rule>
           
           <rule name="Car blog view" enabled="true">
               <match url="^cars/([^/]+)/([^/]+)/([^/]+)/([0-9]+)/blogs/([0-9]+)/$" />
