--- a/core/docsoft.entities/docsoft.entities.csproj
+++ b/core/docsoft.entities/docsoft.entities.csproj
@@ -108,7 +108,9 @@
       <Name>linh</Name>
     </ProjectReference>
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <Folder Include="redisEntity\" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
