--- a/web/web.config
+++ b/web/web.config
@@ -9,7 +9,8 @@
     <add name="con" connectionString="Data Source=(local);Initial Catalog=xetui;Integrated Security=True; Pooling=false;" providerName="System.Data.SqlClient"/>
   </connectionStrings>
   <system.web>
-    <compilation debug="false" targetFramework="4.0">
+    <!--<compilation debug="false" targetFramework="4.0">-->
+      <compilation debug="true" targetFramework="4.0">
       <assemblies>
         <add assembly="Microsoft.Build.Framework, Version=4.0.0.0, Culture=neutral, PublicKeyToken=B03F5F7F11D50A3A"/>
         <add assembly="System.Management, Version=4.0.0.0, Culture=neutral, PublicKeyToken=B03F5F7F11D50A3A"/>
